[tool.poetry]
name = "audsync"
version = "0.1.0"
description = "Unified interface for audio and text alignment tools"
license = "AGPL-3.0"
authors = ["Connor Brinton <connor@brintonium.com>"]
readme = "README.md"
repository = "https://github.com/connorbrinton/audsync"
keywords = ["audio analysis", "forced alignment"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
aeneas = { version = "^1.7", optional = true }
numpy = "^1.17"
librosa = "^0.7.0"
pysoundfile = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
